--- a/src/app/shared/components/not-found-page/not-found-page.component.html
+++ b/src/app/shared/components/not-found-page/not-found-page.component.html
@@ -1,1 +1,1 @@
-<h1 class="errorMessage">{{ 'shared.not-found' | translate }}</h1>
+<h1 class="errorMessage">{{ 'shared.not.found' | translate }}</h1>
