--- a/src/app/modules/gallery/pages/photo-list/photo-list.component.html
+++ b/src/app/modules/gallery/pages/photo-list/photo-list.component.html
@@ -1,1 +1,11 @@
-<p>Work in progress...</p>
+<app-page-number-navigation/>
+<div class="container text-start">
+  <div class="row">
+    @for (photo of photoList; track photo.id) {
+      <div class="col-6 col-md-4">
+        <app-photo-list-item [photo]=photo></app-photo-list-item>
+      </div>
+    }
+  </div>
+</div>
+<app-page-number-navigation/>
