--- a/src/app/modules/gallery/components/photo-list-item/photo-list-item.component.html
+++ b/src/app/modules/gallery/components/photo-list-item/photo-list-item.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <h2>{{photo.name}}</h2>
+    <h2>{{ photo.name }}</h2>
     <div class="row">
       <input type="image" alt="photo"
-             appImagePlaceholder [src]=photo.image
-            (click)="navigate()">
+             appImagePlaceholder [src]=photo.imageBase64
+             (click)="navigate()">
     </div>
   </div>
 </div>
