--- a/src/app/modules/gallery/components/photo-upload-form/photo-upload-form.component.html
+++ b/src/app/modules/gallery/components/photo-upload-form/photo-upload-form.component.html
@@ -44,40 +44,8 @@
 
     </div>
 
-    <form name="tagForm">
-      <div class="form-group">
-        <label for="tag"> {{ 'photo.form.tags.label' | translate }} </label>
-        <input type="text"
-               id="tag"
-               name="tag"
-               class="form-control"
-               required
-               maxlength="20"
-               [pattern]=RegexConstants.LETTERS_NUMBERS_SPACES_REGEX
-               #tag="ngModel"
-               [(ngModel)]="tagInput">
-
-        <button type="button"
-                id="addTagButton"
-                [disabled]="!tag.valid"
-                (click)="addTag()">
-          {{ 'photo.buttons.tag.add' | translate }}
-        </button>
-      </div>
-    </form>
-
-    <div class="container text-center">
-      <div class="row">
-        @for (tag of model.tags; track tag) {
-          <div class="col">
-            {{ tag }}
-            <button type="button"
-                    (click)="removeTag(tag)">
-              x
-            </button>
-          </div>
-        }
-      </div>
+    <div class="form-group">
+      <app-tag-input (tagsChange)="updateTags($event)"/>
     </div>
 
     <div class="form-group">
