--- a/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
+++ b/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
@@ -44,13 +44,13 @@
       <div class="col">
         <label>{{ 'photo.search.date.start.label' | translate }}</label>
         <input type="date"
-               [(ngModel)]="model.uploadDateTimeStart">
+               [(ngModel)]="model.uploadDateStart">
       </div>
-      
+
       <div class="col">
         <label>{{ 'photo.search.date.end.label' | translate }}</label>
         <input type="date"
-               [(ngModel)]="model.uploadDateTimeEnd">
+               [(ngModel)]="model.uploadDateEnd">
       </div>
     </div>
 
