--- a/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.scss
+++ b/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.scss
@@ -9,12 +9,6 @@ input {
   width: 50%;
 }
 
-.clickable {
-  cursor: pointer;
-  background-color: colors.$gray;
-}
-
-.expanded-search {
-  margin: auto;
+.search {
   background-color: colors.$light-gray;
 }
