--- a/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
+++ b/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
@@ -13,8 +13,8 @@
   </div>
 </div>
 
-<div class="row clickable"
-     (click)="toggleExpand();">
+<div class="row clickable search"
+     (click)="toggleExpand()">
   <div class="col">
     <label class="clickable">
       {{ 'photo.search.expand.label' | translate }}
@@ -22,8 +22,8 @@
   </div>
 </div>
 
-@if (isExpanded) {
-  <div class="expanded-search">
+@if (expanded) {
+  <div class="search">
     <div class="row">
       <div class="col">
         <label>{{ 'photo.search.id.label' | translate }}</label>
