--- a/src/app/modules/gallery/pages/photo-edit/photo-edit.component.html
+++ b/src/app/modules/gallery/pages/photo-edit/photo-edit.component.html
@@ -1,2 +1,2 @@
-<h2>{{ 'photo.upload' | translate }}</h2>
+<h2>{{ 'photo.edit.title' | translate }}</h2>
 <app-photo-upload-form [model]=model></app-photo-upload-form>
