--- a/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
+++ b/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
@@ -46,7 +46,7 @@
         <input type="date"
                [(ngModel)]="model.uploadDateTimeStart">
       </div>
-      
+
       <div class="col">
         <label>{{ 'photo.search.date.end.label' | translate }}</label>
         <input type="date"
@@ -56,7 +56,7 @@
 
     <div class="row">
       <div class="col">
-        <app-tag-input (tagsChange)="updateTags($event)"/>
+        <app-tag-input [tagList]="this.model.tags"/>
       </div>
     </div>
   </div>
