--- a/src/app/modules/gallery/pages/photo-view/photo-view.component.html
+++ b/src/app/modules/gallery/pages/photo-view/photo-view.component.html
@@ -1,22 +1,56 @@
-<h1>{{ 'photo.name' | translate }} {{ photoDto.name }}</h1>
-<h2>{{ 'photo.upload.date' | translate }} {{ photoDto.uploadDateTime }}</h2>
-
-<img appImagePlaceholder [src]="photoDto.imageBase64">
-
-<h2>{{ 'photo.tags' | translate }}</h2>
 <div class="container text-start">
   <div class="row">
-    @for (tag of photoDto.tags; track tag) {
-      <div class="col">
-        <button type="button">
-          {{ tag }}
-        </button>
-      </div>
-    }
+    <div class="col">
+      <h1>{{ 'photo.name' | translate }} {{ photoDto.name }}</h1>
+    </div>
+    <div class="col">
+      <h2>{{ 'photo.upload.date' | translate }} {{ photoDto.uploadDateTime }}</h2>
+    </div>
   </div>
-</div>
 
-<div class="photoDescription">
-  <h2>{{ 'photo.description' | translate }}</h2>
-  {{ photoDto.description }}
+  <div class="row">
+    <div class="col">
+      <button
+        class="delete-button"
+        (click)="deletePhoto()">
+        DELETE
+      </button>
+    </div>
+    <div class="col">
+      <button
+        (click)="editPhoto()">
+        EDIT
+      </button>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <img appImagePlaceholder [src]="photoDto.imageBase64">
+    </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col">
+      <h2>{{ 'photo.tags' | translate }}</h2>
+    </div>
+
+    <div class="row">
+      @for (tag of photoDto.tags; track tag) {
+        <div class="col">
+          <button type="button">
+            {{ tag }}
+          </button>
+        </div>
+      }
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="photoDescription col">
+      <h2>{{ 'photo.description' | translate }}</h2>
+      {{ photoDto.description }}
+    </div>
+  </div>
 </div>
