MR4: implemented edit, delete functionality, image data now is received as a Blob

--- a/src/app/modules/gallery/components/photo-list-item/photo-list-item.component.html
+++ b/src/app/modules/gallery/components/photo-list-item/photo-list-item.component.html
@@ -3,7 +3,7 @@
     <h2>{{ photo.name }}</h2>
     <div class="row">
       <input type="image" alt="photo"
-             appImagePlaceholder [src]=photo.imageBase64
+             appImagePlaceholder [src]="imageSrc"
              (click)="navigate()">
     </div>
   </div>
