--- a/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
+++ b/src/app/modules/gallery/components/photo-search-bar/photo-search-bar.component.html
@@ -56,7 +56,7 @@
 
     <div class="row">
       <div class="col">
-        <app-tag-input [tagList]="this.model.tags"/>
+        <app-tag-input [(tagListModel)]="model.tags"/>
       </div>
     </div>
   </div>
