--- a/src/app/modules/gallery/pages/photo-edit/photo-edit.component.html
+++ b/src/app/modules/gallery/pages/photo-edit/photo-edit.component.html
@@ -1,2 +1,9 @@
 <h2>{{ 'photo.edit.title' | translate }}</h2>
-<app-photo-upload-form [model]=model></app-photo-upload-form>
+@defer (when modelLoaded) {
+  <app-photo-upload-form
+    [model]="model"
+    (formSubmitted)="onFormSubmitted($event)"
+    [withImageUpload]="false"
+  >
+  </app-photo-upload-form>
+}
